# arc-crypto

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml
src/: error.rs  fiat_shamir.rs  generators.rs  hash.rs  lib.rs  seeded_prng.rs  types.rs
src/client/: mod.rs  proof.rs
src/server/: mod.rs  proof.rs
tests/: test_integration.rs  test_vectors.rs
